force-app/main/default/objects/RegimenProduct__c/RegimenProduct__c.object-meta.xml
<CustomObject>
    <label>Regimen Product</label>
    <nameField>
        <displayFormat>RP-{000000000}</displayFormat>
        <label>Regimen Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Regimen Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>