force-app/main/default/objects/RegimenProduct__c/fields/isSpecial__c.field-meta.xml
<CustomField>
    <fullName>isSpecial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Special</label>
    <type>Checkbox</type>
</CustomField>