force-app/main/default/objects/RegimenProduct__c/fields/MixedFlavour__c.field-meta.xml
<CustomField>
    <fullName>MixedFlavour__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mixed Flavour</label>
    <type>Checkbox</type>
</CustomField>