force-app/main/default/objects/RegimenProduct__c/fields/Regimen__c.field-meta.xml
<CustomField>
    <fullName>Regimen__c</fullName>
    <label>Regimen</label>
    <referenceTo>Regimen__c</referenceTo>
    <relationshipLabel>Regimen Products</relationshipLabel>
    <relationshipName>RegimenProducts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>