force-app/main/default/objects/RegimenProduct__c/fields/Source_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Source_Update_Date__c</fullName>
    <label>Source Update Date</label>
    <type>DateTime</type>
</CustomField>